--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libSOIL"]
 	path = libSOIL
 	url = https://github.com/smibarber/libSOIL
+[submodule "SOIL2-clone"]
+	path = SOIL2-clone
+	url = https://github.com/alelievr/SOIL2-clone
