--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libft"]
 	path = libft
 	url = git@github.com:Chr0nos/libft.git
+[submodule "glfw"]
+	path = glfw
+	url = https://github.com/glfw/glfw.git
