--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/glfw/glfw.git
 [submodule "libtga"]
 	path = libtga
-	url = https://github.com/Chr0nos/libtga.git
+	url = ssh://git@github.com:/Chr0nos/libtga.git
